# assignment-bounty

./: .gitignore  create.html  index.html  package-lock.json  package.json
.next/: trace
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/: layout.js  page.js
.next/static/css/app/: layout.css  page.css
.next/static/webpack/: webpack.019316fcb4f0cc61.hot-update.js  webpack.2da4ec519001c4b0.hot-update.js  webpack.304f9232b7daa100.hot-update.js  webpack.36e3b318de0c6fe2.hot-update.js  webpack.660d0783854f34e5.hot-update.js  webpack.7e27c216fc739b45.hot-update.js  webpack.b1f884075148d69e.hot-update.js  webpack.b61cfdfcf7bae038.hot-update.js  webpack.bc190f2258b0f01a.hot-update.js  webpack.bf702883e821cb6f.hot-update.js
.next/static/webpack/app/: page.019316fcb4f0cc61.hot-update.js  page.2da4ec519001c4b0.hot-update.js  page.304f9232b7daa100.hot-update.js  (+7 more)
.next/types/app/: layout.ts  page.ts
backend/: Cargo.toml  db
backend/src/: bounty.rs  login_info.rs  main.rs  soterius.rs  tag.rs  user.rs  utils.rs
scripts/: create.js  homepage.js
src/app/: layout.tsx  page.tsx
src/app/styles/: globals.css  page.css
styles/: create.css  homepage.css  style.css
